--- a/Algorithms/searching Types.ipynb
+++ b/Algorithms/searching Types.ipynb
@@ -4,26 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a=[1,2,3,4,5]\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Linear search"
+   ]
   }
  ],
  "metadata": {
