--- a/Data structures/Array.ipynb
+++ b/Data structures/Array.ipynb
@@ -20,6 +20,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reversed array is : [7, 6, 5, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=[1,3,4,5,6,7]\n",
+    "n=len(arr)-1\n",
+    "i=0\n",
+    "j=len(arr)-1\n",
+    "for i in range(n):\n",
+    "    arr[i],arr[j]=arr[j],arr[j]\n",
+    "    i=i+1\n",
+    "    j=j-1\n",
+    "print(\"Reversed array is :\",arr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
