--- a/Leecode/Medium/medium_pro.ipynb
+++ b/Leecode/Medium/medium_pro.ipynb
@@ -2,44 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1]\n"
+      "1\n"
      ]
     }
    ],
    "source": [
+    "## Peak Element\n",
+    "\n",
     "class Solution(object):\n",
-    "    def twoSum(self, nums, target):\n",
+    "    def findPeakElement(self, nums):\n",
     "        \"\"\"\n",
     "        :type nums: List[int]\n",
-    "        :type target: int\n",
-    "        :rtype: List[int]\n",
+    "        :rtype: int\n",
     "        \"\"\"\n",
-    "        seen={}\n",
-    "        for i,nums in enumerate(nums):\n",
-    "            if target-nums in seen:\n",
-    "                return [seen[target-nums],i]\n",
-    "            elif nums not in seen:\n",
-    "                seen[nums]=i\n",
-    "nums=[2,7,11,15]\n",
-    "target=9\n",
+    "        i=0\n",
+    "        j=len(nums)-1\n",
+    "        while i<j:\n",
+    "            mid=(i+j)//2\n",
+    "            if nums[mid]<nums[mid+1]:\n",
+    "                i=mid+1\n",
+    "            else:\n",
+    "                j=mid\n",
+    "        return i\n",
+    "nums=[1,2,1,3]\n",
     "sol=Solution()\n",
-    "result=sol.twoSum(nums,target)\n",
+    "result=sol.findPeakElement(nums)\n",
     "print(result)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
