--- a/Leecode/Medium/medium_pro.ipynb
+++ b/Leecode/Medium/medium_pro.ipynb
@@ -39,6 +39,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution(object):\n",
+    "    def search(self, nums, target):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :type target: int\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        i = 0\n",
+    "        j = len(nums) - 1\n",
+    "\n",
+    "        while i <= j:\n",
+    "            mid = (i + j) // 2\n",
+    "\n",
+    "            # Check if mid is the target\n",
+    "            if nums[mid] == target:\n",
+    "                return mid\n",
+    "\n",
+    "            # Check which half is sorted\n",
+    "            if nums[i] <= nums[mid]:  # Left half is sorted\n",
+    "                if nums[i] <= target < nums[mid]:\n",
+    "                    j = mid - 1  # Search in the left half\n",
+    "                else:\n",
+    "                    i = mid + 1  # Search in the right half\n",
+    "            else:  # Right half is sorted\n",
+    "                if nums[mid] < target <= nums[j]:\n",
+    "                    i = mid + 1  # Search in the right half\n",
+    "                else:\n",
+    "                    j = mid - 1  # Search in the left half\n",
+    "\n",
+    "        # If we exit the loop, target is not in the array\n",
+    "        return -1\n",
+    "\n",
+    "# Example usage:\n",
+    "nums = [4, 5, 6, 7, 0, 1, 2]\n",
+    "target = 7\n",
+    "sol = Solution()\n",
+    "result = sol.search(nums, target)\n",
+    "print(result)  # Output: 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
