--- a/Leecode/Medium/medium_pro.ipynb
+++ b/Leecode/Medium/medium_pro.ipynb
@@ -96,7 +96,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 287\n",
+    "# Duplicate number\n",
+    "class Solution(object):\n",
+    "    def findDuplicate(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        slow=fast=nums[0]\n",
+    "        while True:\n",
+    "            slow=nums[slow]\n",
+    "            fast=nums[nums[fast]]\n",
+    "            ## meeting point\n",
+    "            if slow == fast:\n",
+    "                break\n",
+    "        ## Find the Entrance of the cycle\n",
+    "        slow=nums[0]\n",
+    "        while slow != fast:\n",
+    "            slow=nums[slow]\n",
+    "            fast=nums[fast]\n",
+    "        return fast\n",
+    "\n",
+    "\n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
