--- a/Algorithms/sorting.ipynb
+++ b/Algorithms/sorting.ipynb
@@ -67,10 +67,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 2, 2]\n"
+     ]
+    }
+   ],
    "source": [
+    "## Partiton algorithm\n",
+    "\n",
+    "def partition(arr,p,q):\n",
+    "    pivot=arr[p]\n",
+    "    i=p\n",
+    "    for j in range(i+1,q+1):\n",
+    "        if arr[j]<=pivot:\n",
+    "            i=i+1\n",
+    "            arr[i],arr[j]=arr[j],arr[i]\n",
+    "    arr[i],arr[p]=arr[p],arr[i]\n",
+    "    return i\n",
+    "\n",
+    "\n",
+    "\n",
     "## Quick Sort\n",
     "\n",
     "def Quicksort(arr,p,q):\n",
@@ -78,30 +100,35 @@
     "        ## divide\n",
     "        mid=partition(arr,p,q)\n",
     "        ##2 conquer\n",
+    "        ## Left array recursive call\n",
     "        Quicksort(arr,p,mid-1)\n",
+    "        ## Right array recursive call\n",
     "        Quicksort(arr,mid+1,q)\n",
-    "        \n",
+    "\n",
+    "    return arr\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "arr=[23,47,11,52,20,74]\n",
+    "arr=[2,0,2,1,1,0]\n",
     "p=0\n",
     "q=len(arr)-1\n",
     "result=Quicksort(arr,p,q)\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8%3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
